--- a/templates/addtest_traceroute.html
+++ b/templates/addtest_traceroute.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
-{% block title %}BGP AS Path Tests{% endblock %}
+{% block title %}Traceroute Tests{% endblock %}
 {% block head %}
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-rc.0/css/select2.min.css" rel="stylesheet" />
 {% endblock %}
 {% block content %}
 <h2>Add Traceroute Test</h2>
-<form id="bgpASpathTestForm" method="POST">
+<form id="tracerouteTestForm" method="POST">
     {{ form.hidden_tag() }}
 
     <div class="mb-3">
