add Ping test type

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -50,6 +50,9 @@
                             class="sb-nav-link sb-dropdown-link">Traceroute</a>
                     </li>
                     <li class="sb-nav-item">
+                        <a href="{{ url_for('showtests_ping') }}" class="sb-nav-link sb-dropdown-link">Ping</a>
+                    </li>
+                    <li class="sb-nav-item">
                         <a href="{{ url_for('showtests_txrxtransceiver') }}" class="sb-nav-link sb-dropdown-link">TxRx
                             SFP
                             Transceiver</a>
