--- a/templates/test_progress.html
+++ b/templates/test_progress.html
@@ -20,6 +20,12 @@
                 Skipped: <span id="traceroute_skipped">{{ stats.traceroute_test.skipped }}</span> /
                 Total: <span id="traceroute_total">{{ stats.traceroute_test.total }}</span>
             </p>
+            <p><strong>Ping Tests:</strong><br>
+                Completed: <span id="ping_completed">{{ stats.ping_test.completed }}</span> /
+                Running: <span id="ping_running">{{ stats.ping_test.running }}</span> /
+                Skipped: <span id="ping_skipped">{{ stats.ping_test.skipped }}</span> /
+                Total: <span id="ping_total">{{ stats.ping_test.total }}</span>
+            </p>
             <p><strong>TxRx SFP Transceiver Tests:</strong><br>
                 Completed: <span id="txrxtransceiver_completed">{{ stats.txrxtransceiver_test.completed }}</span> /
                 Running: <span id="txrxtransceiver_running">{{ stats.txrxtransceiver_test.running }}</span> /
